plugins {
	id 'java'
}

repositories {
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.bronzemantcg'
version = '0.2.0'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.bronzemantcg.BronzemanTcgPluginTest'

	jvmArgs "-ea"
	if (System.getProperty('os.name').toLowerCase().contains('mac'))
	{
		// RuneLite's OSX fullscreen adapter needs this on JDK 11+
		jvmArgs '--add-exports', 'java.desktop/com.apple.eawt=ALL-UNNAMED'
	}
	args "--developer-mode", "--debug"
}
